--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
     border: 1px solid #D6D9DC;
     border-radius: 3px;
 
-    width: 80%;
+    width: 50%;
     padding: 50px;
     margin: 0 0 0px 0;
 }
@@ -140,7 +140,7 @@ body {
     }
 .legacy-form-row {
     width: 120px;
-    text-align: center; /* Added to center-align text */
+    text-align: center; 
     padding-right: 0;
 }
 
