--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
     border: 1px solid #D6D9DC;
     border-radius: 3px;
 
-    width: 50%;
+    width: 80%;
     padding: 50px;
     margin: 0 0 0px 0;
 }
@@ -68,10 +68,9 @@ body {
     .speaker-form-header,
     .speaker-form {
         width: 600px;
-    }
-    .form-row {
+    } .form-row {
         flex-direction: row;
-        align-items: flex-start; /* To avoid stretching */
+        align-items: flex-start; 
         margin-bottom: 20px;
         height: initial;
     }
@@ -138,7 +137,7 @@ body {
     {
         float: left;
     }
-.legacy-form-row {
+    .legacy-form-row {
     width: 120px;
     text-align: center; 
     padding-right: 0;
